--- a/src/scss/base/_styling.scss
+++ b/src/scss/base/_styling.scss
@@ -12,8 +12,8 @@ IMAGE
 
 footer {
 	background-image: url('/img/bg.jpg');
-	background-size: cover;
-	background-position: center;
+	background-size: 1440px;
+	background-position: 50% 10%;
 }
 
 /*––––––––––––––––––––––––––––––
