--- a/src/scss/base/_styling.scss
+++ b/src/scss/base/_styling.scss
@@ -12,8 +12,8 @@ IMAGE
 
 footer {
 	background-image: url('/img/bg.jpg');
-	background-size: 1440px;
-	background-position: 50% 10%;
+	background-size: cover;
+	background-position: 50% 50%;
 }
 
 /*––––––––––––––––––––––––––––––
@@ -22,6 +22,7 @@ LINE
 
 //Put a solid line below header
 hr {
+	border-style: solid;
 	border-color:$line-color;
 	border-width:$line-width;
 	width: 22px;
