--- a/src/scss/base/_styling.scss
+++ b/src/scss/base/_styling.scss
@@ -11,7 +11,7 @@ IMAGE
 –––––––––––––––––––––––––––––––*/
 
 footer {
-	background-image: url('/img/bg.jpg');
+	background-image: url('bg.jpg');
 	background-size: cover;
 	background-position: 50% 50%;
 }
