--- a/src/scss/base/_styling.scss
+++ b/src/scss/base/_styling.scss
@@ -19,7 +19,7 @@ footer {
 	background-image: url('bg.jpg');
 	background-size: cover;
 	background-position: 50% 50%;
-	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+	//box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
 	animation-name: fade;
 	animation-delay: 3s;
 	animation-duration: 1.5s;
