--- a/src/scss/base/_styling.scss
+++ b/src/scss/base/_styling.scss
@@ -12,17 +12,17 @@ IMAGE
 
 @keyframes fade {
 	from{box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);}
-	to{box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.45);}
+	to{box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);}
 }
 
 footer {
 	background-image: url('bg.jpg');
 	background-size: cover;
 	background-position: 50% 50%;
-	//box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
 	animation-name: fade;
-	animation-delay: 3s;
 	animation-duration: 1.5s;
+	animation-delay: 2s;
+	animation-fill-mode: forwards;
 }
 
 /*––––––––––––––––––––––––––––––
